[package]
name = "myos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"]}
spin = "0.9.8"
vga = "0.2.9"
x86_64 = "0.14.10"
x86 = "0.52.0"
pic8259 = "0.10.4"
buddy_system_allocator = "0.9.0"
hashbrown = "0.14.0"
pc-keyboard = "0.7.0"
shlex = {version = "1.1.0", default-features = false}

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
